Fix white spacing between sections

--- a/css/abc.css
+++ b/css/abc.css
@@ -1,4 +1,5 @@
 :root {
+    --content-width: 1200px;
     --indigo: #42029c;
     --marigold: #fcc602;
     --offwhite: #f9f9f9;
@@ -44,7 +45,7 @@ body {
     top: 0;
     left: 0;
     right: 0;
-    width: 1024px;
+    width: var(--content-width);
     height: 120px;
     background-color: var(--offwhite);
     margin-left: auto;
@@ -81,7 +82,7 @@ body {
 }
 
 .content {
-    width: 1024px;
+    width: var(--content-width);
     padding: 47px;
     margin-left: auto;
     margin-right: auto;
@@ -89,12 +90,12 @@ body {
 
 .title-area {
     margin-top: 150px;
-    margin-bottom: 60px;
+    margin-bottom: max(calc(100vh - 700px), 60px);
 }
 
 .title-area-title {
     font-family: "Fira Sans", sans-serif;
-    font-size: 60px;
+    font-size: 72px;
     font-weight: 500;
     color: var(--black);
     margin-bottom: 24px;
@@ -102,14 +103,14 @@ body {
 
 .title-area-subtitle {
     font-family: "Fira Sans", sans-serif;
-    font-size: 42px;
+    font-size: 54px;
     font-weight: 300;
     line-height: 1.1;
     color: var(--black);
 }
 
 .section-1-area {
-    margin-bottom: 36px; /* 60px - card bottom margin (24px) */
+    margin-bottom: 76px; /* 100px - card bottom margin (24px) */
 }
 
 .section-1-title {
@@ -148,6 +149,7 @@ body {
 }
 
 .section-2-area {
+    margin-bottom: 100px;
 }
 
 .section-2-title {
@@ -160,7 +162,6 @@ body {
 
 .section-2-content {
     width: 610px;
-    height: 341px;
     font-family: "Fira Sans", sans-serif;
     font-size: 20px;
     font-weight: normal;
@@ -210,7 +211,7 @@ body {
 }
 
 footer {
-    width: 1024px;
+    width: var(--content-width);
     margin-top: 13px; /* 60px - .content padding (47px) */
     margin-left: auto;
     margin-right: auto;
@@ -231,8 +232,8 @@ footer {
 }
 
 @media (max-width: 1023px) {
-    .content, .navbar-area, footer {
-        width: 100%;
+    :root {
+        --content-width: 100%;
     }
 
     .card-container {
